# qzcli

./: README.en.md  README.md  SKILL.md  pyproject.toml  qzcli
docs/: README.md  case-notebook-exec.md  reverse-engineering-playbook.md  工作流.md
src/qzcli/: __init__.py  cli.py  config.py  errors.py  output.py
src/qzcli/client/: cas.py  crypto.py  endpoints.py  http.py
src/qzcli/core/: avail.py  create.py  notebook.py  options.py  wait.py  whoami.py
src/qzcli/domain/: models.py
tests/: conftest.py  test_create_payload.py  test_crypto.py  test_fields_projection.py  test_footgun_and_priority.py  test_image_and_stop.py  test_image_priority_helpers.py  test_logs_follow.py  test_nb_exec.py  test_options.py  test_wait.py  test_whoami.py
